--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -511,6 +511,7 @@ article {
   max-width: 15rem;
   display: block;
   flex: 1 0 auto;
+  width: 100%;
 }
 @media only screen and (max-width: 1199px) {
   .avatar-wrapper {
