Refactoring css\html closes #34

--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -1,37 +1,32 @@
-.timeline-date{
-  padding-bottom:0.4em;
+.timeline-date {
+  padding-bottom: 0.4em;
   font-style: italic;
   font-size: 1.05em;
 }
 
-
-.timeline-text{
+.timeline-text {
   text-indent: 1.25em;
 }
 
 .card {
   position: relative;
-  
   width: 300px;
   height: 200px;
   overflow: hidden;
-
   border-radius: 5px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-/*Light  cover above the slide show*/
+/* Light  cover above the slide show */
 .card::after {
   content: '';
   position: absolute;
   left: 0;
   top: 0;
   z-index: 900;
-
   display: block;
   width: 100%;
   height: 100%;
-
   background-color: rgba(140, 22, 115, 0.2);
 }
 
@@ -40,23 +35,19 @@
   top: 0;
   left: 0;
   z-index: 7;
-
   display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
-  
-  transform: translateX( 700px );
-  background-image: url( '../img/youmust1.jpg ');
+  transform: translateX(700px);
+  background-image: url('../img/youmust1.jpg ');
   background-size: cover;
-  
   animation: opaqTransition 10s cubic-bezier(0, 0, 0, 0.97) infinite;
 }
 
-
 .card_part.card_part-two {
   z-index: 6;
-  background-image: url( '../img/youmust2.jpg');
+  background-image: url('../img/youmust2.jpg');
   background-size: 100% 100%;
   background-position: center top;
   animation-delay: 2.5s;
@@ -64,7 +55,7 @@
 
 .card_part.card_part-three {
   z-index: 5;
-  background-image: url( '../img/youmust3.jpg' );
+  background-image: url('../img/youmust3.jpg');
   background-size: cover;
   background-position: center top;
   animation-delay: 5s;
@@ -72,91 +63,89 @@
 
 .card_part.card_part-four {
   z-index: 4;
-  background-image: url( '../img/youmust4.jpg');
+  background-image: url('../img/youmust4.jpg');
   background-size: cover;
   background-position: center top;
   animation-delay: 7.5s;
 }
 
 @keyframes opaqTransition {
-  3% { transform: translateX( 0 ); }
-  25% { transform: translateX( 0 ); }
-  28% { transform: translateX( -700px ); }
-  100% { transform: translateX( -700px ); }
+  0% { transform: translateX(0); }
+  25% { transform: translateX(0); }
+  28% { transform: translateX(-700px); }
+  100% { transform: translateX(-700px); }
 }
 
-
-#ghost{
+#ghost {
   cursor: pointer;
   font-size: 1.2em;
   font-weight: bolder;
 }
 
-#ghost-animation{
+#ghost-animation {
   display: none;
 }
 
-.hadouken img{
+.hadouken img {
   position: relative;
 }
 
-.hadouken-ryu{
+.hadouken-ryu {
   height: 100px;
   z-index: 2;
-  left:80px;
-  top:-70px;
+  left: 80px;
+  top: -70px;
 }
 
-#powerful-hadouken{
+#powerful-hadouken {
   position: absolute;
-  left:-150px;
-  top:-20px;
+  left: -150px;
+  top: -20px;
   height: 170px;
   display: none;
 }
 
-#ray{
+#ray {
   position: absolute;
-  width:430px;
-  top:33px;
+  width: 430px;
+  top: 33px;
   height: 73px;
-  left:197px;
+  left: 197px;
   display: none;
 }
 
-#hadouken{
+#hadouken {
   font-size: 1.2em;
 }
 
-
-#hadouken:hover{
+#hadouken:hover {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 767px){
-  #hadouken{
+@media only screen and (max-width: 767px) {
+  #hadouken {
     display: none;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px){
-  #ray{
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  #ray {
     width: 170px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  #ray{
+  #ray {
     width: 300px;
   }
 }
 
-#hadouken-undo{
+#hadouken-undo {
   display: none;
   font-weight: bold;
   font-size: 1.5em;
 }
 
-#hadouken-undo:hover{
+#hadouken-undo:hover {
   cursor: pointer;
 }
